# DS_demos

NHST/: experiments_with_coins.ipynb
bootstrapping/: pyproject.toml
bootstrapping/data/: AW_mentions.csv  noisy_circle.csv  old_faithful.csv  video_link_tweets.csv
bootstrapping/notebooks/: clusterer.py
