[tool.poetry]
name = "40_bootstrapping"
version = "0.1.0"
description = ""
authors = ["Billiejoe Charlton <billiejoe@brandwatch.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
jupyterlab = "^3.3.4"
nbautoexport = "^0.5.0"
plotly = "^5.7.0"
sklearn = "^0.0"
tqdm = "^4.64.0"
ipywidgets = "^7.7.0"
more-itertools = "^8.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
